[tool.poetry]
name = "Downloader"
version = "0.1.0"
description = "Tool that downloads data from the site and loads it into DB."
authors = ["ganpoweird <seryios.sych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
SQLAlchemy = "^1.4.45"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
